Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 5.1.0 RC1
-
Fix Version/s: 5.1.0
-
Component/s: Quick: Dialogs
-
Labels:None
-
Environment:Ubuntu 13.04 X11. Qt 5.1 RC1 built from source with gcc 4.7.3.
The backtrace indicates it crashed in QWindow::setTransientParent(QWindow*)
-
Commits:24947fb8cc1859d5d193b2d66746c1541f30ab9b
Description
Setting a ColorDialog to visible crashes qmlscene. This is new in Qt 5.1 RC1 and did not happen in Beta 1. A simple test case is the following:
import QtQuick 2.1
import QtQuick.Dialogs 1.0
ColorDialog {
visible: true
}
Attachments
Issue Links
- is required for
-
QTBUG-31856 Qt5.1.0 issues to be fixed before final
-
- Closed
-