QColorDialogHelper: Force QWindow before setting flags

This needs the same fix as the one in the QFileDialogHelper (change
I7a3b2321f4a1bf179dced8e98598559f396386db).  However to be even safer,
we can check for a null pointer before calling any methods on the
QWindow.

Task-number: QTBUG-31834
Change-Id: I319326f06fb2c92dc898fd12be86b6c7b7f87e5a
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>