src/imports/widgets/qquickqfiledialog.cpp
@@ -97,8 +97,10 @@ public:
 
     virtual bool show(Qt::WindowFlags f, Qt::WindowModality m, QWindow *parent) {
         m_dialog.winId();
-        m_dialog.windowHandle()->setTransientParent(parent);
-        m_dialog.windowHandle()->setFlags(f);
+        QWindow *window = m_dialog.windowHandle();
+        Q_ASSERT(window);
+        window->setTransientParent(parent);
+        window->setFlags(f);
         m_dialog.setWindowModality(m);
         m_dialog.show();
         return m_dialog.isVisible();
